syntax = "proto3";

package spine.validation.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test";
option java_outer_classname = "BlizzardProto";
option java_multiple_files = true;

message Snowflake {
    int32 edges = 1;
    int32 vertices = 2;
}

message Blizzard {

    repeated Snowflake snowflake = 1 [(distinct) = true];
}

message RainDrop {

    int32 mass_in_grams = 1 [(min) = { value: "1", exclusive: false}];
}

message Rain {

    repeated RainDrop rain_drop = 1 [
        (required) = true,
        (validate) = true,
        (if_invalid).error_msg = "Bad rain drop!"
    ];
}

message MeteoStatistics {

    RainDrop average_drop = 1 [(validate) = true];
}
