syntax = "proto3";

package spine.validation.test.money;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test.money";
option java_outer_classname = "TimeProto";
option java_multiple_files = true;

message LocalTime {

    int32 hours = 1 [(max).value = "23", (min).value = "0"];

    int32 minutes = 2 [(range) = "[0..60)"];

    float seconds = 3 [(min).value = "0.0", (max).value = "59.999"];
}
